# playground

./: .gitignore  Pipfile  README.org  lru-cache.py  search-a-2d-matrix-ii.py
lang/elisp/: Y_combinator.el  a-few-more-complex-func.el  about-list.el  buffer-related-func.el  car-cdr-cons.el  count.el  cutting-and-storing-text.el  function-defun.el  get_input_from_minibuffer.el  graph-print.el  loop-recursive.el  my_unscroll.el  narrowing-widening.el  quick_sort.el  regular-expression.el  seaching-modify-buffers.el  simple-count-word-in-defun.el  study_elisp.el  yank-text-back.el
lang/groovy/: ExamScores.groovy  Example.groovy
lang/haskell/: haskell_tut1.hs  haskell_tut2.hs  haskell_tut3.hs  haskell_tut4.hs
lang/prolog/: chapter2.pl  experiment1.pl  experiment2.pl  learn_prolog1.pl  learn_prolog2.pl  prolog-note.org
lang/rust/: Cargo.toml
lang/rust/play_debug_assertion/: Cargo.toml
lang/rust/play_debug_assertion/src/: main.rs
lang/rust/play_vec/: Cargo.toml
lang/rust/play_vec/src/: main.rs
lang/scala/: ScalaTutorial1.scala  ScalaTutorial2.scala  ScalaTutorial3.scala  ScalaTutorial4.scala  ScalaTutorial5.scala  ScalaTutorial6.scala  ScalaTutorial7.scala  study1.scala  study2.scala  study3.scala  study4.scala  study5.scala  study6.scala  study7.scala  study8.scala
lang/scheme/: scheme-interpreter.rkt
online_judge/codevs/: 1007.cpp  1011.cpp  1015.cpp  1017.cpp  1023.cpp  1039.cpp  1045.cpp  1057.cpp  1075.cpp  1075_.cpp  1076.cpp  1083.cpp  1130.cpp  1212.cpp  1274.cpp  1275.cpp  1276.cpp  1313.cpp  1336.cpp  1381.cpp  1384.cpp  1385.cpp  1395.cpp  (+18 more)
(+299 files in other folders)
