[workspace]
members = [
        "play_debug_assertion",
        "play_vec"
]

[profile.dev]
# opt-level = 0
# debug = true
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 1
# panic = 'unwind'

[profile.release]
opt-level = "z"
debug = true
# rpath = false
# lto = true
# debug-assertions = false
codegen-units = 1
# panic = 'unwind'
